# DAS-RP

./: .gitignore  README.md  experiment_results.xlsx  pyproject.toml
assets/: basic_or_condition_config.json  basic_xor_condition_config.json  data_attribute_case.json
assets/BPIC2019/: BPIC2019.bpmn  BPIC2019.json
assets/Sepsis/: Sepsis.bpmn  Sepsis.json
assets/Trafic/: Trafic.bpmn  Trafic.json
src/discovery/attributes/: attribute_discovery.py  case_attributes.py  feature_extraction.py  ge_continuous_attributes.py  ge_discrete_attributes.py  helpers.py  preprocessing.py
src/discovery/gateway_conditions/: bpmn_parser.py  branching_rules.py  gateway_conditions.py  log_parser.py  preprocessing.py  replayer.py  trace_processing.py
src/scripts/generators/: generate_branching_conditions_long.py  generate_branching_conditions_short.py  generate_data_attributes.py  simulate_branching_conditions.py
src/scripts/runners/: run_branching_conditions.py  run_data_attributes.py  run_life.py
